--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
+
 {
   "name": "weight-loss-diary",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "vite build"
   },
   "dependencies": {
     "ethers": "^6.8.1",
@@ -13,7 +12,6 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0"
+    "vite": "^4.3.9"
   }
 }
